# ISRO-SIH

./: .gitignore  .vercelignore  COMPETITION_ALIGNMENT_SUMMARY.md  COMPETITION_README.md  CURSOR_UI_UPGRADE_PROMPT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.frontend  LICENSE  Makefile  PRODUCTION_AUDIT_REPORT.md  Procfile  README.md  README_ENHANCED.md  README_PRODUCTION.md  UI_TRANSFORMATION_SUMMARY.md  demo_presentation.py  docker-compose.production.yml  env.example  genesis_ai.db  isro_gnss_demo.csv  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-frontend.txt  requirements.txt  streamlit_test_data.csv  test_api_request.json  test_data.csv  test_payload.json  vercel.json
.streamlit/: config.toml
api/: index.py  requirements.txt
artifacts/eval/: metrics.csv
artifacts/eval_streamlit/: metrics.csv
artifacts/eval_test/: metrics.csv
artifacts/eval_transformer/: metrics.csv
configs/: data.yaml  model.yaml  train.yaml
docs/: architecture.md  model_card.md
lightning_logs/version_0/: metrics.csv
lightning_logs/version_1/: metrics.csv
lightning_logs/version_2/: hparams.yaml  metrics.csv
src/DATASETS/: DATA_GEO_Train.csv  DATA_MEO_Train.csv  DATA_MEO_Train2.csv
src/genesis_ai/: __init__.py
src/genesis_ai/anomaly/: __init__.py  detector.py
src/genesis_ai/app/: __init__.py  competition_dashboard.py  enhanced_main.py  main.py  (+1 more)
tests/: test_advanced_models.py  test_eval_smoke.py  test_features.py  test_hybrid_model.py  test_loader.py  test_models.py  test_schema.py  test_training_choice.py  test_training_smoke.py
(+34 files in other folders)
